--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-# Ignore environment variable files
-.env
+# dependencies
+node_modules/
+npm-debug.log*
+
+# Expo
+.expo/
+expo-settings.json
+
+# React Native build folders
+android/
+ios/
+
+# Python venv
+venv/
+__pycache__/
+*.py[cod]
+
+# Editor folders
+.vscode/
+
