--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native/virtualized-lists": "^0.80.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
     "expo-camera": "~16.1.9",
     "expo-dev-client": "~5.2.1",
+    "expo-file-system": "~18.1.10",
     "expo-linear-gradient": "~14.1.5",
     "expo-media-library": "~17.1.7",
     "expo-modules-core": "~2.4.0",
@@ -34,7 +36,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-timer-picker": "^2.2.0",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-image-manipulator": "~13.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
