--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native/virtualized-lists": "^0.80.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
@@ -19,11 +20,12 @@
     "expo-camera": "~16.1.9",
     "expo-dev-client": "~5.2.1",
     "expo-file-system": "~18.1.10",
+    "expo-image-manipulator": "~13.1.7",
     "expo-linear-gradient": "~14.1.5",
     "expo-media-library": "~17.1.7",
     "expo-modules-core": "~2.4.0",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^11.8.1",
+    "firebase": "^11.10.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -36,8 +38,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-timer-picker": "^2.2.0",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17",
-    "expo-image-manipulator": "~13.1.7"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
