--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-timer-picker": "^2.2.0",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-av": "~15.1.7",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
