--- a/app.json
+++ b/app.json
@@ -33,9 +33,7 @@
       }
     },
     "owner": "ryanzzzx",
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
+    "runtimeVersion": "1.0.0",
     "updates": {
       "url": "https://u.expo.dev/900e0456-a08b-4969-bb8b-0e4106dcef9d"
     }
